! Fix parent to have z-index: 0

--- a/scss/controls/collapsable.scss
+++ b/scss/controls/collapsable.scss
@@ -32,6 +32,7 @@
 
     .panel-heading {
       position: relative;
+      z-index: 0;
 
       a {
         display: block;
